# rgpot

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CNAME  LICENSE  README.md  Readme.org  architecture.html  changelog.html  code_of_conduct.html  genindex.html  index.html  integration_guide.html  meson.build  meson_options.txt  objects.inv  pixi.toml  quickstart.html  readme_src.org  rust-items.html  search.html  searchindex.js  sitemap.xml  towncrier.toml
.doctrees/: changelog.doctree  code_of_conduct.doctree  environment.pickle  index.doctree
.doctrees/api/: class_AtomMatrix.doctree  class_GenericPotImpl.doctree  class_PotClient.doctree  class_rgpot_CuH2Pot.doctree  class_rgpot_LJPot.doctree  class_rgpot_PotentialBase.doctree  class_rgpot_cache_KeyHash.doctree  class_rgpot_cache_PotentialCache.doctree  class_rgpot_registry.doctree  class_rgpot_types_AtomMatrix.doctree  global.doctree  index.doctree  namespace_rgpot.doctree  namespace_rgpot_cache.doctree  namespace_rgpot_types.doctree  namespace_rgpot_types_adapt.doctree  namespace_rgpot_types_adapt_capnp.doctree  namespace_rgpot_types_adapt_eigen.doctree  namespace_rgpot_types_adapt_xtensor.doctree  struct_rgpot_ForceInput.doctree  struct_rgpot_ForceOut.doctree
.doctrees/contributing/: index.doctree
.github/workflows/: build.yml  build_test.yml  ci_doc_commenter.yml  ci_docs.yml  pre_commit.yml  release.yml
CppCore/: meson.build
CppCore/examples/: call_cuh2.cc  eigen_call_cuh2.cc  eigen_call_ljpot.cc  xt_call_cuh2.cc
CppCore/rgpot/: ForceStructs.hpp  PotHelpers.cc  PotHelpers.hpp  Potential.hpp  PotentialCache.cc  PotentialCache.hpp  base_types.hpp  pot_types.hpp
CppCore/rgpot/CuH2/: CuH2Pot.cc  CuH2Pot.hpp  cuh2Utils.cc  cuh2Utils.hpp  meson.build
CppCore/rgpot/LennardJones/: LJPot.cc  LJPot.hpp  meson.build
CppCore/rgpot/rpc/: Potentials.capnp  capnp_compile.py  meson.build  pot_bridge.cc  pot_bridge.h  py_comp_multiprocess.py  py_mpi_comp.py  py_parclient.py  pyclient.py  server.cpp
CppCore/rgpot/types/: AtomMatrix.hpp
CppCore/rgpot/types/adapters/: eigen.hpp  xtensor.hpp
CppCore/rgpot/types/adapters/capnp/: capnp_adapter.hpp
CppCore/tests/: BridgeStressTest.cc  CacheTest.cc  CapnpAdapterTest.cc  CuH2PotTest.cc  InvarianceTest.cc  cuh2UtilsTest.cc
_sources/: changelog.rst.txt  code_of_conduct.rst.txt  index.rst.txt  quickstart.rst.txt
_sources/api/: class_AtomMatrix.rst.txt  class_GenericPotImpl.rst.txt  class_PotClient.rst.txt  class_rgpot_CalcResult.rst.txt  class_rgpot_CuH2Pot.rst.txt  class_rgpot_Error.rst.txt  class_rgpot_InputSpec.rst.txt  class_rgpot_LJPot.rst.txt  class_rgpot_PotentialBase.rst.txt  class_rgpot_PotentialHandle.rst.txt  class_rgpot_RpcClient.rst.txt  class_rgpot_cache_KeyHash.rst.txt  class_rgpot_cache_PotentialCache.rst.txt  class_rgpot_registry.rst.txt  class_rgpot_types_AtomMatrix.rst.txt  global.rst.txt  group_rgpot_cpp.rst.txt  index.rst.txt  namespace_rgpot.rst.txt  namespace_rgpot_cache.rst.txt  namespace_rgpot_details.rst.txt  namespace_rgpot_types.rst.txt  namespace_rgpot_types_adapt.rst.txt  namespace_rgpot_types_adapt_capnp.rst.txt  namespace_rgpot_types_adapt_eigen.rst.txt  namespace_rgpot_types_adapt_xtensor.rst.txt  struct_rgpot_ForceInput.rst.txt  struct_rgpot_ForceOut.rst.txt
_sources/contributing/: index.rst.txt
_sources/contributing/developer/: faq.rst.txt  index.rst.txt  release.rst.txt  testing.rst.txt
_sources/crates/rgpot_core/: Potentials_capnp.rst.txt  c_api.rst.txt  lib.rst.txt  potential.rst.txt  rpc.rst.txt  status.rst.txt  tensor.rst.txt  types.rst.txt
_sources/howto/: embedding.rst.txt  integration.rst.txt
_sources/reference/: architecture.rst.txt
_sources/tutorials/: quickstart.rst.txt
api/: class_AtomMatrix.html  class_GenericPotImpl.html  class_PotClient.html  class_rgpot_CalcResult.html  class_rgpot_CuH2Pot.html  class_rgpot_Error.html  class_rgpot_InputSpec.html  class_rgpot_LJPot.html  class_rgpot_PotentialBase.html  class_rgpot_PotentialHandle.html  class_rgpot_RpcClient.html  class_rgpot_cache_KeyHash.html  class_rgpot_cache_PotentialCache.html  class_rgpot_registry.html  class_rgpot_types_AtomMatrix.html  global.html  group_rgpot_cpp.html  index.html  namespace_rgpot.html  namespace_rgpot_cache.html  namespace_rgpot_details.html  namespace_rgpot_types.html  namespace_rgpot_types_adapt.html  namespace_rgpot_types_adapt_capnp.html  namespace_rgpot_types_adapt_eigen.html  namespace_rgpot_types_adapt_xtensor.html  namespace_std.html  struct_rgpot_ForceInput.html  struct_rgpot_ForceOut.html
ci/gha/: workflow.ncl
contributing/: index.html
contributing/developer/: faq.html  index.html  release.html  testing.html
crates/rgpot_core/: Potentials_capnp.html  c_api.html  lib.html  potential.html  rpc.html  status.html  tensor.html  types.html
crates/rgpot_core/c_api/: potential.html  rpc.html  types.html
crates/rgpot_core/rpc/: client.html  server.html
docs/: style_guide.org
docs/newsfragments/: +3e583e56.potlib.added.md  +a1b2c3d4.rustcore.added.md  +a7b8c9d0.potlib.fixed.md  +b2c3d4e5.rustcore.added.md  +b8c9d0e1.build.changed.md  +c3d4e5f6.rustcore.added.md  +d1e2f3a4.rustcore.added.md  +d4e5f6a7.ci.added.md  +e44f4523.potlib.added.md  +e5f6a7b8.docs.added.md  +f6a7b8c9.rustcore.added.md  +release-ready.build.added.md
docs/orgmode/: architecture.org  changelog.org  code_of_conduct.org  index.org  quickstart.org
docs/orgmode/contributing/: index.org
docs/source/: Doxyfile_potlib.cfg  conf.py  doxyrest-config.lua  index.rst
howto/: embedding.html  integration.html
include/rgpot/: errors.hpp  potential.hpp  rgpot.hpp  rpc_client.hpp  types.hpp
reference/: architecture.html
rgpot-core/: Cargo.toml  README.md  README.org  build.rs  cbindgen.toml
rgpot-core/include/: rgpot.h
rgpot-core/schema/: Potentials.capnp
rgpot-core/src/: lib.rs  potential.rs  status.rs  tensor.rs  types.rs
rgpot-core/src/c_api/: mod.rs  potential.rs  rpc.rs  types.rs
rgpot-core/src/rpc/: client.rs  mod.rs  server.rs
scripts/: org_to_md.sh
tests/: rpc_integ.py
tutorials/: quickstart.html
(+18 files in other folders)
