# Booleans
option('with_tests', type : 'boolean', value : false)
option('with_examples', type : 'boolean', value : false)
option('with_xtensor', type : 'boolean', value : false)
option('with_eigen', type : 'boolean', value : false)
option('with_rpc', type : 'boolean', value : false)
option('with_rpc_client_only', type : 'boolean', value : false)
option('with_cache', type : 'boolean', value : false)
option('pure_lib', type : 'boolean', value : true)
option('with_rust_core', type : 'boolean', value : false)
