[package]
name = "rgpot-core"
version = "0.1.0"
edition = "2021"
description = "Core Rust library for rgpot: RPC-based potential energy surface calculations"
license = "MIT"

[lib]
name = "rgpot_core"
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = []
rpc = ["dep:capnp", "dep:capnp-rpc", "dep:tokio", "dep:tokio-util", "dep:futures"]
cache = []

[dependencies]
dlpk = "0.1"
capnp = { version = "0.20", optional = true }
capnp-rpc = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
futures = { version = "0.3", optional = true }

[build-dependencies]
cbindgen = "0.27"
capnpc = "0.20"
