[package]
name = "rgpot-core"
version = "1.0.0"
edition = "2021"
description = "Core Rust library for rgpot: RPC-based potential energy surface calculations"
license = "MIT"
repository = "https://github.com/OmniPotentRPC/rgpot"
documentation = "https://rgpot.rgoswami.me"
readme = "README.md"
keywords = ["potential-energy", "rpc", "molecular-dynamics", "dlpack", "ffi"]
categories = ["science", "api-bindings"]
exclude = ["Cargo.lock"]

[lib]
name = "rgpot_core"
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = []
rpc = ["dep:capnp", "dep:capnp-rpc", "dep:capnpc", "dep:tokio", "dep:tokio-util", "dep:futures"]
cache = []
gen-header = ["dep:cbindgen"]

[dependencies]
dlpk = "0.1"
capnp = { version = "0.20", optional = true }
capnp-rpc = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
futures = { version = "0.3", optional = true }

[build-dependencies]
cbindgen = { version = "0.27", optional = true }
capnpc = { version = "0.20", optional = true }

[package.metadata.docs.rs]
features = ["rpc"]
rustdoc-args = ["--cfg", "docsrs"]
